--- a/Bankey/Bankey/Base.lproj/LaunchScreen.storyboard
+++ b/Bankey/Bankey/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,10 +12,26 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dollarPixel" translatesAutoresizingMaskIntoConstraints="NO" id="AqK-e6-NH8">
+                                <rect key="frame" x="0.0" y="229.66666666666663" width="393" height="393"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="AqK-e6-NH8" secondAttribute="height" multiplier="1:1" id="Jt0-Ki-n9y"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.96078431372549022" green="0.93333333333333335" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="AqK-e6-NH8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ieg-7d-QYT"/>
+                            <constraint firstAttribute="trailing" secondItem="AqK-e6-NH8" secondAttribute="trailing" id="NdP-J7-9P3"/>
+                            <constraint firstItem="AqK-e6-NH8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="eF1-es-26j"/>
+                            <constraint firstItem="AqK-e6-NH8" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="uSH-yC-xw0"/>
+                            <constraint firstItem="AqK-e6-NH8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vty-pQ-2yS"/>
+                            <constraint firstItem="AqK-e6-NH8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xw2-2M-vwt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +39,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dollarPixel" width="600" height="600"/>
+    </resources>
 </document>
